--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
-a{
+
+/*a{
 	text-decoration: none;
 }
 
@@ -67,4 +68,98 @@ h4{
 .nav-item:hover .long{
 	display: block;
 	opacity: 1;
+}
+*/
+
+body{
+	background-color: #282C2F/*jetblack-#343434 */ /*#696969*/;
+}
+.long{
+	display: none;
+	opacity: 0;
+	transition: 2s;
+}
+
+.nav-item:hover .short{
+	display: none;
+}
+
+.nav-item:hover .long{
+	display: block;
+	opacity: 1;
+}
+.nav-item:hover {
+	color:white;
+}
+
+.blockquote
+{   
+	font-size: 30px;
+}
+#heading{
+	text-align: center;
+	color:white;
+	font-family: sans-serif;
+	font-size: 50px
+
+}
+
+.content-field{
+	border-style: solid;
+	width:90%;
+	margin: auto;
+	background-color: #323639 /*   #353935   #28282B  #696969 */;	
+
+}
+
+#content-image{
+	display: block;
+	width: 90%;
+	float: left;
+	/*position:relative;
+ 	padding-left: 170px;*/
+}
+.content-image-left-right{
+	display: :inline-block;
+}
+#i{
+	width:20%;
+}
+.table-content{
+	margin:auto;
+
+	
+
+}
+.btn-center{
+
+}
+
+.table {
+border-collapse: separate;
+border-spacing: 200px;
+}
+td{
+	border-spacing: 20px;
+}
+.quote{
+
+	font-family: sans-serif;
+	color:white;
+	width:50%;
+
+
+}
+.blockquote{
+	font-size: 50px;
+
+
+}
+
+#left{
+	float:left;
+	width: 50%;
+}
+#right{
+	float:left;
 }
