--- a/css/index.css
+++ b/css/index.css
@@ -70,13 +70,13 @@ h4{
 	opacity: 1;
 }
 */
-.navbar{
+.navbar1{
 	height: 65px;
 }
-.navbar-brand{
+.navbar-brand1{
 	font-size: 30px;
 }
-.nav-item{
+.nav-item1{
 	font-size: 20px;
 }
 
@@ -188,4 +188,10 @@ td{
 }
 .margin{
 	margin:auto;
+}
+a{
+	font-size: 20px;
+}
+#project_title{
+	font-size: 30px;
 }
