--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,9 @@ body{
 	
 
 }
+.fas fa-book-open{
+
+}
 .btn-center{
 
 }
@@ -165,6 +168,7 @@ td{
 
 
 }
+
 .blockquote{
 	font-size: 50px;
 	font-color:Montserrat-black;
@@ -181,7 +185,7 @@ td{
 }
 #title
 {
-	font-family: "Montserrat-black";
+	font-family: "sans-serif";
 	font-size: 3rem;
 	line-height: 2;
 	color: #8f8f8f;
@@ -209,4 +213,7 @@ a{
 }
 .card-title{
 	text-align: center;
+}
+#content_right{
+	font-family: sans-serif;
 }
